feat: add joor configs to the library.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "launchdarkly-react-client-sdk",
-  "version": "3.0.10",
-  "description": "LaunchDarkly SDK for React",
+  "name": "@joor/launchdarkly-react-client-sdk",
+  "version": "3.0.10-1",
+  "description": "Joor's fork of LaunchDarkly SDK for React",
   "author": "LaunchDarkly <team@launchdarkly.com>",
   "license": "Apache-2.0",
   "keywords": [
@@ -42,9 +42,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/launchdarkly/react-client-sdk.git"
+    "url": "git://github.com/joor/react-client-sdk.git"
   },
-  "homepage": "https://github.com/launchdarkly/react-client-sdk",
+  "homepage": "https://github.com/joor/react-client-sdk",
   "devDependencies": {
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.1.0",
